2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/association.py: use one rotation function (update_dir
	method and xs rotation refactorized), show direction arrow on proper
	side of association name

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support

2005-01-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: fixed bug in Lifeline diagram.

2005-01-11  wrobell <wrobell@pld-linux.org>

	* gaphor/UML/uml2.gaphor: added InternalStructures diagrams

2005-01-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: Use gtk.AccelMap to store accelerator
	keys. Now accelerators can be configured at runtime.
	* gaphor/__init__.py, gaphor/ui/__init__.py: load/save accelmap at
	start/end of application.

2005-01-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: fixed small bug, now recent-files also
	works with an empty recent-files list.

2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: fixed ObjectAction for use with slots.
	Added ActionPool.set_action().
	* gaphor/ui/mainactions.py: added Recent files slot
	* gaphor/ui/mainwindow.py: (set_filename) add file to recent files.

2005-01-04  wrobell <wrobell@pld-linux.org>

	* gaphor/ui/mainactions.py: set default name for created diagram and
	allow user to edit it immediately

2005-01-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: added parse() and render operations to
	Lifeline.
	* gaphor/misc/action.py: added better support for Slots. Now a
	slot can be represented by a class. A slot can be rebuild (so the
	menu is rebuild).
	* gaphor/ui/menufactory.py: extented for use of slots.
	* tests/menu.py: added test for slots.

2005-01-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/pluginmanager.py: raise exceptions when a wrong xml-tag is
	found in the plugin.xml file.
