@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- vim:sw=2:et:
 -->
-<plugin name="PNG Export"
+<gaphor-plugin name="PNG Export"
         version="0.1"
         author="Jeroen Vloothuis">
   <description>
@@ -32,4 +32,4 @@
       <depends action="TabChange"/>
     </action>
   </provide>
-</plugin>
+</gaphor-plugin>
