@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- vim:sw=2:et:
 -->
-<plugin name="PyNSource"
+<gaphor-plugin name="PyNSource"
         version="0.1"
         author="Arjan Molenaar">
   <description>
@@ -29,4 +29,4 @@
       -->
     </action>
   </provide>
-</plugin>
+</gaphor-plugin>
